--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@
 
 title: LangGraph-GUI
 email: homun@posetmage.com
-url: https://LangGraph-GUI.github.io # the base hostname & protocol for your site, e.g. http://example.com
+url: https://HierarchyChatBot.github.io # the base hostname & protocol for your site, e.g. http://example.com
 
 description: LangGraph-GUI
 #baseurl:  # the subpath of your site, e.g. /blog
-repository: LangGraph-GUI/LangGraph-GUI.github.io
+repository: HierarchyChatBot/HierarchyChatBot.github.io
 
 defaults:
   -
