--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: LangGraph-GUI
+title: LangGraph-ChatBot
 email: homun@posetmage.com
 url: https://HierarchyChatBot.github.io # the base hostname & protocol for your site, e.g. http://example.com
 
